<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_about"
            android:title="About"
            />
        <item
            android:id="@+id/navigation_logout"
            android:title="Logout"
            />
    </group>

</menu>
